# air_alert_analysis

./: .env.dev  .gitignore  README.md  alerts.duckdb.wal  app.py  pyproject.toml  ukraine_oblasts.geojson
src/: generate_fake_data.py  ingest.py  retrieve_data_sample.py
