[project]
name = "ukraine-air-alerts"
version = "0.1.0"
description = "Time series dashboard of air alerts in Ukraine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ingestion
    "httpx>=0.27",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "loguru>=0.7",
    # dashboard
    "dash>=2.17",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    "pandas>=2.2",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.uv]
package = false